<?xml version="1.0"?>
<package format="3">
  <name>hikrobot_aravis_ros_driver</name>
  <version>0.1.0</version>
  <description>Aravis camera driver (ROS2) for hikrobot</description>
  <maintainer email="salvo.dipp@gmail.com">Salvo D'Ippolito</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>opencv</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>aravis-0.8</exec_depend> <!-- note: runtime/debian package name may differ -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
